objects/Demo3__c.object
<CustomObject>
    <description>Demo purpose</description>
    <fields>
        <fullName>Demo_Title__c</fullName>
        <label>Demo Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_Email__c</fullName>
        <label>Presenter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Demo__c</fullName>
        <label>Type of Demo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Demo3</label>
    <nameField>
        <label>Demo3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>